# payback

./: .gitattributes  README.md  config.py  pyproject.toml  setup.cfg
be/: Dockerfile  clear.sh  config_be.py  docker-compose.yml  geoip  pyproject.toml  requirements.txt
be/app/: main.py
be/app/payment/: freekassa.py  payment.py  trial.py
be/db/: .gitignore  database.py  models.py  schemas.py
be/langs_be/: cz.json  de.json  en.json  es.json  fr.json  it.json  lang.py  nl.json  pl.json  ru.json  tr.json  zh.json
be/lib/: exceptions.py
be/misc/: burning-emails.txt  burning_emails.py
be/templates/: form-stripe.html  new_user_letter.html  new_user_letter1.html  payment-freekassa.html  restore_letter.html  skel_options_ovpn.txt
be/tests/: conftest.py  test_cls.py  test_server.py
crontabs/: Dockerfile  README.md  config_cron.py  crontab  docker-compose.yml  env.dbloc  env.dbprod  env.dbstage  env.vars  parser_args.py  pyproject.toml  requirements1.txt  run.sh
crontabs/crons/: env.sh  nwcstcp.sh  nwcstpr.sh  remind.sh
crontabs/db/: db_query.py  schemas.py
crontabs/db/grpc_lib/: __init__.py
crontabs/langs/: subjects.json
crontabs/lib/: mail.py  utils.py
crontabs/scripts/: new_customer_coupon.py  new_customer_promo.py  send_payment_reminder.py
crontabs/template/: reminder_new.html
crontabs/template/email/: lookingtobuy_en.html  lookingtobuy_es.html  lookingtobuy_fr.html  lookingtobuy_it.html  lookingtobuy_jp.html  lookingtobuy_nl.html  lookingtobuy_pl.html  lookingtobuy_pt.html  lookingtobuy_ru.html  lookingtobuy_tr.html  lookingtobuy_zh.html  newcustomer_coupon_cz.html  newcustomer_coupon_de.html  newcustomer_coupon_en.html  newcustomer_coupon_es.html  newcustomer_coupon_fr.html  newcustomer_coupon_it.html  newcustomer_coupon_jp.html  newcustomer_coupon_nl.html  newcustomer_coupon_pl.html  newcustomer_coupon_pt.html  newcustomer_coupon_ru.html  newcustomer_coupon_tr.html  newcustomer_coupon_zh.html  newcustomer_promo_cz.html  newcustomer_promo_de.html  (+11 more)
crontabs/tests/: conftest.py  test_newcustomer_coupon.py  test_newcustomer_promo.py  test_reminder.py
(+31 files in other folders)
